[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelComponents/Segments/BombShowerSegment.gd" type="Script" id=1]

[node name="BombShowerSegment" type="Node2D"]
script = ExtResource( 1 )

[node name="SegmentTime" type="Timer" parent="."]
one_shot = true

[node name="BombSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SegmentTime" to="." method="_on_SegmentTime_timeout"]
[connection signal="timeout" from="BombSpawnTimer" to="." method="_on_BombSpawnTimer_timeout"]
